crates/aiken-lang/src/parser/definition/snapshots/type_alias_basic.snap
---
source: crates/aiken-lang/src/parser/definition/type_alias.rs
description: "Code:\n\ntype Thing = Int"
---
TypeAlias(
    TypeAlias {
        decorators: [],
        alias: "Thing",
        annotation: Constructor {
            location: 13..16,
            module: None,
            name: "Int",
            arguments: [],
        },
        doc: None,
        location: 0..16,
        parameters: [],
        public: false,
        tipo: (),
    },
)
